objects/Dailight_Savings_Periods__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Dailight_Savings_In_Effect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether dailight savings apply to the period of time</description>
        <label>Dailight Savings In Effect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Period end date (included)</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Period start date (included)</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Dailight Savings Periods</label>
</CustomObject>